--- a/RebarsToExcelLibrary/Views/TableCreationProgressWindow.xaml
+++ b/RebarsToExcelLibrary/Views/TableCreationProgressWindow.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="RebarsToExcel.Views.AnalyzeWindow"
+﻿<Window x:Class="RebarsToExcel.Views.TableCreationProgressWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:viewmodel="clr-namespace:RebarsToExcel.ViewModels" 
-        d:DataContext="{d:DesignInstance Type=viewmodel:DataManageVM}"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:models="clr-namespace:RebarsToExcel.Models" 
+        d:DataContext="{d:DesignInstance Type=models:TableManager}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="250" Width="350"
+        Title="MainWindow" Height="200" Width="350"
         WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="CanResizeWithGrip"
         BorderBrush="#808080" BorderThickness="0.5" Background="#F6F6F6" Foreground="#1A1A1A">
 
@@ -119,11 +118,10 @@
         <!--#endregion-->
 
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
-            <TextBlock Text="АНАЛИЗ МОДЕЛИ" Grid.Row="2" Grid.Column="1" Margin="0,0,0,20"
+            <TextBlock Text="СОЗДАНИЕ ТАБЛИЦЫ" Grid.Row="2" Grid.Column="1" Margin="0,0,0,20"
                        HorizontalAlignment="Center" VerticalAlignment="Center"
                        Style="{StaticResource TitleFont}"/>
 
-            <!--Анализ деталей-->
             <Grid Margin="25,0,25,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -132,38 +130,17 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0"
-                           Text="Детали:" FontFamily="{StaticResource Regular}" HorizontalAlignment="Left"/>
-                <TextBlock x:Name="rebarProgressCounterTextBlock" Grid.Column="0" 
-                           Text="{Binding BarsProgressCounter}" FontFamily="{StaticResource Regular}" HorizontalAlignment="Right"/>
-                <TextBlock x:Name="rebarSlashTextBlock" Grid.Column="1" 
+                           Text="Элементы:" FontFamily="{StaticResource Regular}" HorizontalAlignment="Left"/>
+                <TextBlock x:Name="progressCounterTextBlock" Grid.Column="0" 
+                           Text="{Binding ProgressCounter}" FontFamily="{StaticResource Regular}" HorizontalAlignment="Right"/>
+                <TextBlock x:Name="slashTextBlock" Grid.Column="1" 
                            Text="/" FontFamily="{StaticResource Regular}" HorizontalAlignment="Center"/>
-                <TextBlock x:Name="rebarProgressTotalCountTextBlock" Grid.Column="2" 
-                           Text="{Binding BarsTotalCount}" FontFamily="{StaticResource Regular}" HorizontalAlignment="Left"/>
+                <TextBlock x:Name="progressTotalCountTextBlock" Grid.Column="2" 
+                           Text="{Binding ProgressTotalCount}" FontFamily="{StaticResource Regular}" HorizontalAlignment="Left"/>
             </Grid>
 
-            <ProgressBar Style="{DynamicResource AtomProgressBarStyleCustom}" x:Name="rebarAnalyzeProgressBar" Margin="0,4,0,0"
-                         Maximum="{Binding BarsTotalCount}" Value="{Binding BarsProgressCounter}"/>
-            
-            <!--Анализ сборочных единиц-->
-            <Grid Margin="25,20,25,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="15"/>
-                    <ColumnDefinition Width="40"/>
-                </Grid.ColumnDefinitions>
-
-                <TextBlock Grid.Column="0"
-                           Text="Сборочные единицы:" FontFamily="{StaticResource Regular}" HorizontalAlignment="Left"/>
-                <TextBlock x:Name="assembliesProgressCounterTextBlock" Grid.Column="0" 
-                           Text="{Binding RebarAssembliesProgressCounter}" FontFamily="{StaticResource Regular}" HorizontalAlignment="Right"/>
-                <TextBlock x:Name="assembliesSlashTextBlock" Grid.Column="1" 
-                           Text="/" FontFamily="{StaticResource Regular}" HorizontalAlignment="Center"/>
-                <TextBlock x:Name="assembliesProgressTotalCountTextBlock" Grid.Column="2" 
-                           Text="{Binding RebarAssembliesTotalCount}" FontFamily="{StaticResource Regular}" HorizontalAlignment="Left"/>
-            </Grid>
-
-            <ProgressBar Style="{DynamicResource AtomProgressBarStyleCustom}" x:Name="assembliesAnalyzeProgressBar" Margin="0,4,0,0"
-                         Maximum="{Binding RebarAssembliesTotalCount}" Value="{Binding RebarAssembliesProgressCounter}"/>
+            <ProgressBar Style="{DynamicResource AtomProgressBarStyleCustom}" x:Name="progressBar" Margin="0,4,0,0"
+                         Value="{Binding ProgressCounter}" Maximum="{Binding ProgressTotalCount}"/>
         </StackPanel>
     </Grid>
 </Window>
